--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: mysql2
-  database: db/development.mysql2
+  adapter: pg
+  database: db/development.pg
   pool: 5
   timeout: 5000
 
@@ -14,13 +14,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: mysql2
-  database: db/test.mysql2
+  database: db/test.pg
   pool: 5
   timeout: 5000
 
 production:
   adapter: mysql2
-  database: db/production.mysql2
+  database: db/production.pg
   pool: 5
   timeout: 5000
   host:
