--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,13 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
+  adapter: pg
   database: db/test.pg
   pool: 5
   timeout: 5000
 
 production:
-  adapter: mysql2
+  adapter: pg
   database: db/production.pg
   pool: 5
   timeout: 5000
