--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,8 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: pg
-  database: db/development.pg
+  adapter: mysql2
+  database: db/development.mysql2
   pool: 5
   timeout: 5000
 
@@ -13,8 +13,8 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: pg
-  database: db/test.pg
+  adapter: mysql2
+  database: db/test.mysql2
   pool: 5
   timeout: 5000
 
